# no-name-card-game

./: Cargo.toml  README.md  clean_bin.sh  start_game.sh  start_server.sh
.github/workflows/: rust.yml
assets/ui/: credits.ron  welcome.ron
client/: Cargo.toml
client/assets/config/: loading.ron
client/assets/prefab/: character_cirno.ron
client/assets/ui/: credits.ron  default_player.ron  game.ron  loading.ron  lobby.ron  login.ron  menu.ron  pause_menu.ron  player.ron  select.ron  welcome.ron
client/config/: display.ron
client/src/: main.rs
client/src/common/: camera.rs  depth_layer.rs  mod.rs  pos.rs
client/src/components/: card.rs  cardgroup.rs  equipment.rs  mod.rs  player.rs
client/src/entities/: mod.rs  player.rs
client/src/events/: connection_event.rs  mod.rs  state_event.rs
client/src/resources/: assets.rs  audio.rs  avatar.rs  character.rs  context.rs  gui.rs  mod.rs  userdata.rs
client/src/resources/config/: audio.rs
client/src/states/: credits.rs  game.rs  loading.rs  lobby.rs  login.rs  menu.rs  mod.rs  pause.rs  select.rs  select_character.rs  welcome.rs
client/src/systems/: chat.rs  message.rs  mod.rs  play_sfx.rs
client/src/utilities/: files.rs  load.rs  loading_config.rs  mod.rs  startup.rs
server/: Cargo.toml
server/src/: main.rs
server/src/systems/: chat.rs  service.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/utilities/: clientinfo.rs  mod.rs  msg.rs
src/: main.rs
src/states/: credits.rs  game.rs  loading.rs  menu.rs  mod.rs
src/systems/: events.rs
