[package]
name = "no-name-card-game"
authors = ["rjman", "hacpy"]
version = "0.1.0"
edition = "2018"

[dependencies]
shared = { path = "../shared" }
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks"]}
log = { version = "^0.4", features = ["serde"] }
structopt = "0.3.22"

[features]
default = ["vulkan"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
