[package]
edition = "2018"
name = "server"
version = "0.1.0"

[dependencies]
shared = { path = "../shared" }
amethyst = { version = "0.15.3", features = ["no-slow-safety-checks"] }
log = { version = "^0.4", features = ["serde"] }
structopt = "0.3.22"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
